<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:fillViewport="true"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="25dp"
            android:text="@string/note_page"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Note_TIET_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/enter_title"
            android:inputType="textCapSentences"
            android:paddingBottom="12dp"
            android:textColor="#212121"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Note_TIET_body"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/write_your_note_here"
                android:inputType="textMultiLine"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Note_MTV_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/creation_date"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Note_MTV_lastEditedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="@string/last_edited_on"
            android:textColor="@color/gray"
            android:textSize="13sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/Note_SIV_picture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="@color/cream_white"
            android:contentDescription="@string/note_image"
            android:src="@drawable/baseline_add_photo_alternate_24"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.MediumComponent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Note_MB_attach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/natural_blue"
            android:icon="@drawable/baseline_add_photo_alternate_24"
            android:insetTop="8dp"
            android:insetBottom="8dp"
            android:text="@string/attach_picture"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="24dp"
            app:elevation="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Note_MB_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="24dp"
                app:elevation="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Note_MB_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/natural_green"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="24dp"
                app:elevation="2dp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
