<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentViews.registration.RegistrationFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Registration_SIV_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:scaleType="center" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Registration_MTV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_reg"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Registration_TIET_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="12dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Registration_TIET_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Registration_TIET_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Registration_MTV_gotoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/i_do_have_an_account"
                android:textColor="#3171E7"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Registration_MB_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#52BD17"
                android:elevation="2dp"
                android:text="@string/reg"
                android:textColor="@color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Registration_MTV_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#DB1D1D" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</FrameLayout>