<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentViews.LoginFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Login_SIV_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:scaleType="center" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Login_MTV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_login"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Login_TIET_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Login_TIET_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Login_MTV_gotoReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/i_don_t_have_an_account"
                android:textColor="@color/blue"
                android:textStyle="bold" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/Login_MB_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                app:cornerRadius="20dp"
                android:layout_below="@+id/Main_MTV_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Login_MTV_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/red" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</FrameLayout>